# disk-usage-cli

./: .gitignore  Cargo.toml  NOTICE  README.md
crates/disk-usage-cli/: Cargo.toml  build.rs
crates/disk-usage-cli/src/: main.rs  test-drawer-animation.html  visualize.rs
crates/disk-usage-cli/src/visualize/: color.ts  flame.ts  index.css  index.html  index.ts  metafile.ts  summary.ts  sunburst.ts  timing.css  timing.ts  treemap.ts  tsconfig.json  whyfile.ts
crates/patched_ignore/: Cargo.toml  README.md
crates/patched_ignore/src/: walk.rs
docs/: design.md  prior-art.md
scripts/: screenshots.js
