[package]
name = "disk-usage-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[[bin]]
name = "duh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ignore = { path = "../../crates/patched_ignore" }
indexmap = "2.2.6"
open = "5.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
